new waybar module to toggle wlsunset on and off

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -149,7 +149,9 @@ tooltip label {
 #disk,
 #temperature,
 #backlight,
-#taskbar {
+#custom-keyboard,
+#custom-wlsunset,
+#taskbar{
     margin: 0 5px 0 5px;
     padding: 0;
 }
