disabled swayimg sway int, added script to set wallpaper using swayimg

--- a/.config/flavours/templates/swayimg/templates/default.mustache
+++ b/.config/flavours/templates/swayimg/templates/default.mustache
@@ -3,7 +3,7 @@ window = {{base00-hex}}
 transparency = grid
 scale = optimal
 fixed = yes
-antialiasing = no
+antialiasing = yes
 slideshow = no
 slideshow_time = 7
 history = 1
